# forms-data-format

./: CHANGELOG.md  README.md  forms-data-format.cabal
app/: Diff.hs  Patch.hs
src/Text/: FDF.hs
