cabal-version:      2.4
name:               forms-data-format
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            BSD-3-Clause
author:             Mario Blažević
maintainer:         blamario@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Text.FDF

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions: ImportQualifiedPost NamedFieldPuns OverloadedStrings
    build-depends:    base == 4.*, incremental-parser >= 0.4 && < 0.6, text
    hs-source-dirs:   src
    default-language: Haskell2010
