cabal-version:      2.4
name:               forms-data-format
version:            0.1.0.0

synopsis: Parse and serialize FDF, the Forms Data Format

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            BSD-3-Clause
author:             Mario Blažević
maintainer:         blamario@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md, README.md

library
    exposed-modules:  Text.FDF

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions: ImportQualifiedPost NamedFieldPuns OverloadedStrings
    build-depends:    base == 4.*, bytestring >=0.9 && < 0.12, text,
                      monoid-subclasses == 1.*, rank2classes >= 1 && < 1.6,
                      parsers < 0.13, grammatical-parsers >= 0.5 && < 0.8
    hs-source-dirs:   src
    default-language: Haskell2010
